patent updates plus misc

--- a/loc-houston.html
+++ b/loc-houston.html
@@ -90,11 +90,10 @@ contact-houston: yes
         <h3 class="section-heading">Outside Sales</h3>
         <div class="row">
           <div class="col-sm-6">
-            <p><strong>Bradley Coble</strong><br/>
-              Southeast/Northeast Regional Sales Manager<br/>
-              Office: +1 (225) 508-3520<br/>
-              Direct: +1 (409) 239-9165<br/>
-            <a href="mailto:Bradley.Coble@stoneagetools.com">bradley.coble@stoneagetools.com</a></p>
+            <p><strong>Sean Baker</strong><br/>
+              Regional Sales Manager<br/>
+              Main: +1 (440) 661-0022
+            <a href="mailto:sean.baker@stoneagetools.com">sean.baker@stoneagetools.com</a></p>
           </div>
         </div>
 
