--- a/loc-la.html
+++ b/loc-la.html
@@ -68,7 +68,7 @@ contact-la: yes
         <div class="row">
           <div class="col-sm-6">
             <p><strong>Sean Baker</strong><br/>
-              Midwest/Canada Regional Sales Manager<br/>
+              Regional Sales Manager<br/>
               Main: +1 (440) 661-0022
             <a href="mailto:sean.baker@stoneagetools.com">sean.baker@stoneagetools.com</a></p>
           </div>
