--- a/loc-ohio.html
+++ b/loc-ohio.html
@@ -79,7 +79,7 @@ contact-ohio: yes
           </div>
           <div class="col-sm-6">
             <p><strong>Jonathan Wood</strong><br/>
-              NE Regional Sales Manager<br/>
+              Regional Sales Manager<br/>
               Main: +1 (970) 946-7212
             <a href="mailto:jonathan.wood@stoneagetools.com">jonathan.wood@stoneagetools.com</a></p>
           </div>
