--- a/solutions.html
+++ b/solutions.html
@@ -99,11 +99,15 @@ master-slider: yes
       <strong>Bill Shires</strong><br>
       StoneAge Solutions Director<br>
       Email: <a href="mailto:bill.shires@stoneagetools.com">bill.shires@stoneagetools.com</a><br>
-      Mobile: +1 (970) 903-4218<br><br>
+      Main: +1 (970) 903-4218<br><br>
       <strong>Michael J. Kreeger</strong><br>
       StoneAge Solutions Technical Sales<br>
       Email: <a href="mailto:mike.kreeger@stoneagetools.com">mike.kreeger@stoneagetools.com</a><br>
-      Office: +1 (970) 403-1437</p>
+      Main: +1 (970) 403-1437<br><br>
+      <strong>Bradley Coble</strong><br>
+      StoneAge Solutions Sales Manager<br>
+      Email: <a href="mailto:bradley.coble@stoneagetools.com">bradley.coble@stoneagetools.com</a><br>
+      Main: +1 (409) 239-9165</p>
   </aside>
 </section>
 
