--- a/stoneage-patents.html
+++ b/stoneage-patents.html
@@ -23,208 +23,146 @@ permalink: /patents
   <table class="table info-table table-striped table-bordered table-condensed">
     <thead>
       <tr>
-        <th>US Patent Number</th>
-        <th>Tool Model</th>
-        <th>Description</th>
+        <th style="width:20%;">StoneAge Name</th>
+        <th style="width:20%;">Model Number</th>
+        <th style="width:20%;">US Patent Number(s)</th>
+        <th style="width:40%;">International Patent Number(s)</th>
       </tr>
     </thead>
     <tbody class="searchable">
       <tr>
-        <td>6,059,202</td>
-        <td>BA-H6, BC, BJ-20/40K, GO-40K</td>
-        <td>Rotary coupling with slip seal holder</td>
+        <td>2” Badger nozzle</td>
+        <td>BA-LK</td>
+        <td>8006920<br>8220724<br>D622810S</td>
+        <td>Europe:EP238747B1<br>Taiwan: 1378828<br>Australia: 2009354020<br>New Zealand: 594919<br>Canada: 2752748<br>China: ZL200980157707.0<br>Malaysia: MY159947A<br>Hong Kong: HK1162392</td>
       </tr>
       <tr>
-        <td>5,964,414</td>
-        <td>BA-H6, WS, WT</td>
-        <td>Rotary nozzle with viscous retarder</td>
+        <td>2” Warthog nozzle</td>
+        <td>WV-1/4; WU</td>
+        <td>8006920<br>8220724</td>
+        <td>Europe: EP238747B1<br>Taiwan: 1378828<br>Australia: 2009354020<br>New Zealand: 594919<br>Canada: 2752748<br>China: ZL200980157707.0<br>Malaysia: MY159947A<br>Hong Kong: HK1162392</td>
       </tr>
       <tr>
-        <td>5,909,848</td>
-        <td>BC, SC, GO</td>
-        <td>Rotary nozzle with coil spring retarder</td>
-      </tr>
-      <tr>
-        <td>8,573,599</td>
-        <td>BC-40K, GO-40K</td>
-        <td>Unitary slip seal cartridge</td>
-      </tr>
-      <tr>
-        <td>D 617,870</td>
-        <td>BN</td>
-        <td>Rotary nozzle design</td>
-      </tr>
-      <tr>
-        <td>D 650,887</td>
-        <td>BN</td>
-        <td>Rotary nozzle design</td>
-      </tr>
-      <tr>
-        <td>8,220,724</td>
-        <td>BN, WV-1/4, 2" Badger, SPFR, BT</td>
-        <td>Rotary nozzle with balanced fluid bearings</td>
-      </tr>
-      <tr>
-        <td>8,434,696</td>
-        <td>BN</td>
-        <td>Rotary nozzle with balanced fluid bearings</td>
-      </tr>
-      <tr>
-        <td>8,006,920</td>
-        <td>BN, WV-1/4, 2" Badger, SPFR, BT</td>
-        <td>Rotary nozzle with balanced fluid bearings</td>
-      </tr>
-      <tr>
-        <td>7,635,096</td>
-        <td>BN, WV-1/4, 2" Badger, SPFR, BT</td>
-        <td>Rotary nozzle with balanced fluid bearings</td>
-      </tr>
-      <tr>
-        <td>D 724,695</td>
-        <td>BT</td>
-        <td>Rotary nozzle design</td>
-      </tr>
-      <tr>
-        <td>9950348</td>
-        <td>BTC-100, BTC-200</td>
-        <td>Boiler Tube Cleaner</td>
-      </tr>
-      <tr>
-        <td>9,699,361</td>
-        <td></td>
-        <td>Camera Skid and Tractor Nozzle Assembly</td>
-      </tr>
-      <tr>
-        <td>6,085,994</td>
-        <td>CST</td>
-        <td>Cable supported rotary nozzle</td>
-      </tr>
-      <tr>
-        <td>5,947,387</td>
-        <td>HC, CY</td>
-        <td>Adjustable 3-D rotary nozzle</td>
-      </tr>
-      <tr>
-        <td>9,662,689</td>
-        <td>LWP</td>
-        <td>Flexible multi-tube cleaning lance positioner guide apparatus</td>
-      </tr>
-      <tr>
-        <td>8,505,845</td>
-        <td>Scorpion</td>
-        <td>System and method for storing, rotating, and feeding a high pressure hose</td>
-      </tr>
-      <tr>
-        <td>9,016,613</td>
-        <td>Scorpion</td>
-        <td>System for rotating and feeding high pressure hose</td>
-      </tr>
-      <tr>
-        <td>9,067,220</td>
-        <td>SPFR</td>
-        <td>Rotary nozzle design</td>
-      </tr>
-      <tr>
-        <td>8,544,768</td>
-        <td>SPFR</td>
-        <td>Self regulating fluid bearing high pressure rotary nozzle</td>
-      </tr>
-      <tr>
-        <td>8,720,811</td>
-        <td>SRT</td>
-        <td>Apparatus for storing and dispensing pressure hose</td>
-      </tr>
-      <tr>
-        <td>9,702,136</td>
-        <td>Switcher</td>
-        <td>High pressure fluid spray nozzle incorporating a flow controlled switching valve</td>
-      </tr>
-      <tr>
-        <td>D 622,810</td>
-        <td>2" Badger</td>
-        <td>Rotary nozzle design</td>
-      </tr>
-      <tr>
-        <td>D 626,624</td>
-        <td>2" Badger</td>
-        <td>Rotary nozzle design</td>
-      </tr>
-      <tr>
-        <td>D 631,131</td>
-        <td>2" Badger</td>
-        <td>Rotary nozzle design</td>
-      </tr>
-      <tr>
-        <td>D 617,871</td>
-        <td>2" Badger</td>
-        <td>Rotary nozzle design</td>
-      </tr>
-      <tr>
-        <td>D 639,906</td>
-        <td>2" Badger</td>
-        <td>Rotary nozzle design</td>
-      </tr>
-      <tr>
-        <td>D 638,912</td>
-        <td>WU (Discontinued)</td>
-        <td>Rotary nozzle design</td>
-      </tr>
-      <tr>
-        <td>9610603</td>
-        <td>SKR</td>
-        <td>HP Waterblasting Nozzle Manipulator</td>
-      </tr>
-      <tr>
-        <td>9919333</td>
-        <td>SKRL, SKR</td>
-        <td>HP Waterblasting Nozzle Manipulator</td>
-      </tr>
-      <tr>
-        <td>9630801</td>
+        <td>AutoBox ABX-2L</td>
         <td>ABX-2L</td>
-        <td>Flexible Lance Drive Apparatus</td>
+        <td>9630801<br>9981822</td>
+        <td>Europe: EP3171993<br>Singapore: 11201700211Q</td>
       </tr>
       <tr>
-        <td>9662689</td>
-        <td>ABX-2L</td>
-        <td>Flexible Lance Drive Apparatus Tube Guide</td>
-      </tr>
-      <tr>
-        <td>9896299</td>
+        <td>AutoBox ABX-3L</td>
         <td>ABX-3L</td>
-        <td>Flexible Lance Drive Apparatus</td>
+        <td>9896299</td>
+        <td></td>
       </tr>
       <tr>
-        <td>9400145</td>
-        <td>ABX-2L</td>
-        <td>Flexible Lance Drive Apparatus Tube Guide</td>
+        <td>AutoBox ABX-PRO</td>
+        <td>ABX-PRO</td>
+        <td>10272480</td>
+        <td>Taiwan: 1646300</td>
       </tr>
       <tr>
-        <td>9981822</td>
-        <td>ABX-2L</td>
-        <td>Flexible tube cleaning lance drive apparatus</td>
+        <td>AutoBox Hose Guide Tube Assembly</td>
+        <td>ABX-201</td>
+        <td>9400145<br>9662689<br>9964368</td>
+        <td></td>
       </tr>
       <tr>
-        <td>9845594</td>
-        <td>WHR, WGR</td>
-        <td>Switcher Nozzle</td>
+        <td>Banshee nozzle</td>
+        <td>BN</td>
+        <td>7,635,096<br>8006920<br>D617,870<br>D650,887<br>8434796</td>
+        <td>Europe: EP19633022B1<br>Taiwan: 1378828<br>Australia: 2013207556<br>Canada: 2855878<br>China: ZL201410332208.3<br>Malaysia: MY167969A<br>New Zealand: 609599<br>Hong Kong: HK1203883</td>
       </tr>
       <tr>
-        <td>9395001</td>
-        <td>WHR, WGR</td>
-        <td>Switcher Nozzle</td>
+        <td>Barracuda</td>
+        <td>BC</td>
+        <td>8573599</td>
+        <td></td>
       </tr>
       <tr>
-        <td>9022057</td>
-        <td>Switcher</td>
-        <td>Flow Controlled Switching Valve</td>
+        <td>Beetle nozzle</td>
+        <td>BT</td>
+        <td>8006920<br>8220724<br>D724695</td>
+        <td>Europe: EP238747B1<br>Taiwan: 1378828<br>Australia: 2009354020<br>New Zealand: 594919<br>Canada: 2752748<br>China:ZL200980157707.0<br>Malaysia: MY159947A<br>Hong Kong: HK1162392</td>
       </tr>
       <tr>
-        <td>8667987</td>
-        <td>Switcher</td>
-        <td>Flow Controlled Switching Valve</td>
+        <td>Cable Swivel Tool</td>
+        <td>CST</td>
+        <td>6085994</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>Gopher</td>
+        <td>GO</td>
+        <td>8573599</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>Hose Containment System</td>
+        <td>HCS</td>
+        <td>10336571</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>Lightweight Positioner</td>
+        <td>LWP</td>
+        <td>10024613</td>
+        <td>Europe: EP3172519B1<br>Singapore: 11201700244W</td>
+      </tr>
+      <tr>
+        <td>Lightweight Striker</td>
+        <td>SKRL</td>
+        <td>9919333</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>Navigator</td>
+        <td>NAV-100</td>
+        <td>9950348<br>10265736</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>ProDrain</td>
+        <td>PRO-700</td>
+        <td>10,272,980</td>
+        <td>Taiwan: 164300</td>
+      </tr>
+      <tr>
+        <td>Sabertooth</td>
+        <td>SRT-100, SBT-20k</td>
+        <td>8720811</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>Scorpion</td>
+        <td></td>
+        <td>8505845<br>9016613</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>Spitfire</td>
+        <td>SPFR</td>
+        <td>8006920<br>8544768<br>8220724<br>9067220</td>
+        <td>Europe: EP2393602<br>Australia: 2010319761<br>Canada: 2753651<br>China: ZL201080015071.9<br>New Zealand: 594919<br>Hong Kong: HK1163594<br>Malayzia: MY160550A</td>
+      </tr>
+      <tr>
+        <td>Striker</td>
+        <td>SKR</td>
+        <td>9610603<br>9919333</td>
+        <td>Europe: EP3242753</td>
+      </tr>
+      <tr>
+        <td>Warthog Magnum</td>
+        <td>WGR; WHR</td>
+        <td>10,118,185</td>
+        <td>Europe: EP3169454B1<br>New Zealand: 724042</td>
+      </tr>
+      <tr>
+        <td>Warthog Switcher</td>
+        <td>WGR-SWT, WHR-SWT</td>
+        <td>9395001<br>9702136<br>9845594<br>10,118,185</td>
+        <td>Europe: EP3169454B1, EP3120056B1<br>Australia: 2015231884<br>Canada: 2941243<br>China: ZL201580013935.6<br>New Zealand: 724042, 732671</td>
       </tr>
     </tbody>
   </table>
-  <p><em>StoneAge patent information can be found on the web at <a href="http://www.sapatents.com">www.sapatents.com</a></em></p>
+  <p><span class="grey">Updated: August 02, 2019</span><br><em>StoneAge patent information can be found on the web at <a href="http://www.sapatents.com">www.sapatents.com</a></em></p>
 </section>
