--- a/contact.html
+++ b/contact.html
@@ -110,10 +110,12 @@ contact-main: yes
               <p>Carrie Grant | +1 (970) 403-1432<br/>
                 <a href="mailto:carrie.grant@stoneagetools.com">carrie.grant@stoneagetools.com</a>
               </p>
+<!--
               <h3>Central America</h3>
               <p>Alan Charles | +1 (720) 219-0777<br/>
                 <a href="mailto:alan.charles@stoneagetools.com">alan.charles@stoneagetools.com</a>
               </p>
+-->
               <h3>India</h3>
               <p>Vishal Trivedi | +91-98-11-007-501<br/>
                 <a href="mailto:vishal.trivedi@stoneagetools.com">vishal.trivedi@stoneagetools.com</a>
@@ -162,17 +164,13 @@ contact-main: yes
               <p>Mike Johnson | +1 (970) 769-1448<br/>
                 <a href="mailto:mike.johnson@stoneagetools.com">mike.johnson@stoneagetools.com</a>
               </p>
-               <h3>USA - Northeast</h3>
+               <h3>USA - Northeast &amp; Central</h3>
                <p>Jonathan Wood | +1 (970) 946-7212<br/>
                  <a href="mailto:jonathan.wood@stoneagetools.com">jonathan.wood@stoneagetools.com</a>
                </p>
-               <h3>USA - Southeast</h3>
+               <h3>USA - Southeast &amp; Texas</h3>
                <p>Sean Baker | +1 (440) 661-0022<br/>
                  <a href="mailto:sean.baker@stoneagetools.com">sean.baker@stoneagetools.com</a>
-               </p>
-               <h3>USA - Texas</h3>
-               <p>Bradley Coble | +1 (409) 239-9165<br/>
-                 <a href="mailto:Bradley.Coble@stoneagetools.com">bradley.coble@stoneagetools.com</a>
                </p>
                <h3>USA - Warthog</h3>
                <p>Anne Brennan | +1 (970) 426-4243<br/>
